exception, error message examples

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div>
-    <header id="header" class="header navbar bg-transparent no-border">
+    <header resourceId="header" class="header navbar bg-transparent no-border">
         <div class="header-container">
             <ul class="nav-left mrg-left-0">
                 <li>
