--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
                 </ul>
                 <div class="width-100 fixed left-0 border bottom"></div>
                 <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane fade in active" id="tab-centered-1">
+                    <div role="tabpanel" class="tab-pane fade in active" resourceId="tab-centered-1">
                         <div class="pdd-horizon-15 pdd-vertical-20">
                             <a href="article.html" class="card article-container">
                                 <div class="card-horizon">
@@ -57,12 +57,12 @@
                             </a>
                         </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane fade" id="tab-centered-2">
+                    <div role="tabpanel" class="tab-pane fade" resourceId="tab-centered-2">
                         <div class="pdd-horizon-15 pdd-vertical-20">
 
                         </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane fade" id="tab-centered-3">
+                    <div role="tabpanel" class="tab-pane fade" resourceId="tab-centered-3">
                         <div class="pdd-horizon-15 pdd-vertical-20">
                         </div>
                     </div>
