--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -13,7 +13,7 @@
         <div class="header-container">
             <ul class="nav-left mrg-left-0">
                 <li>
-                    <a href="index.html">
+                    <a href="/">
                         <div class="logo logo-dark d-none" style="background-image: url('images/logo/logo_full_dark.png')"></div>
                         <div class="logo logo-white" style="background-image: url('images/logo/logo_full_white.png')"></div>
                     </a>
@@ -21,7 +21,7 @@
             </ul>
             <ul class="nav-right">
                 <li class="user-profile">
-                    <a href="login.html">
+                    <a href="/login">
                         <div class="user-info login-btn pointer mrg-right-10">
                             <span class="name pdd-right-5 text-white">Login</span>
                         </div>
